berhasil membuat beberapa perubahan pada html

--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,8 +1,6 @@
-<h1>Welcome to TokoLapak</h1>
+<h1>Welcome to ArlicShop</h1>
 
 <h5>Name: </h5>
-<p>{{name}}</p> <!-- Ubah sesuai dengan nama  -->
-<h5>Price: </h5>
-<p>{{price}}</p> <!-- Ubah sesuai dengan harga  -->
-<h5>Description: </h5>
-<p>{{description}}</p> <!-- Ubah sesuai dengan keterangan -->
+<p>{{name}}</p> 
+<h5>Kelas: </h5>
+<p>{{class}}</p> 
